refactor: Restructure as monorepo with separate backend and frontend
- Move all backend code to backend/ directory
- Create frontend/ directory with React + Vite setup
- Add root package.json with workspace configuration
- Update documentation for monorepo structure
- Configure Railway deployment for both services
- Add frontend-specific build configuration

Structure:
- backend/ - NestJS API with all existing functionality
- frontend/ - React + TypeScript + Vite web application
- Root workspace with unified scripts for development

Development commands:
- npm run dev - Start both backend and frontend
- npm run build - Build both applications
- npm run install:all - Install all dependencies

--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -8,12 +8,16 @@ restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
 
 [[services]]
-name = "plantakeoff-api"
-source = "."
+name = "plantakeoff-backend"
+source = "./backend"
 
 [services.variables]
 NODE_ENV = "production"
 PORT = "${{ PORT }}"
+
+[[services]]
+name = "plantakeoff-frontend"
+source = "./frontend"
 
 [[services]]
 name = "postgres"
