--- a/backend/Dockerfile.backup
+++ b/backend/Dockerfile.backup
@@ -8,8 +8,8 @@ COPY package*.json ./
 COPY tsconfig*.json ./
 COPY nest-cli.json ./
 
-# Install dependencies
-RUN npm ci --only=production && npm cache clean --force
+    # Install dependencies
+    RUN npm install --only=production && npm cache clean --force
 
 # Copy source code
 COPY src/ src/
