--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,13 +2,13 @@
 nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
 
 [phases.install]
-cmds = ["npm ci --include=dev"]
+cmds = [
+  "npm install",
+  "npx prisma generate"
+]
 
 [phases.build]
-cmds = [
-  "npx prisma generate",
-  "npm run build"
-]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm run start:prod"
