fix: Resolve TypeScript compilation errors in backend
- Add missing @nestjs/axios dependency for webhook HTTP requests
- Extend SheetData interface to include layerData and modelData properties
- Fix type casting in artifacts service for feature arrays
- Replace problematic ApiResponse type reference with schema object
- Add proper type casting for Prisma JSON fields in rules engine
- Fix HTTP response typing in webhooks service with proper casting

All TypeScript compilation errors are now resolved and the
backend should build successfully on Railway.

--- a/backend/package.json
+++ b/backend/package.json
@@ -29,6 +29,7 @@
     "postbuild": "cp -r prisma dist/ && cp package*.json dist/"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
