feat: Activate full NestJS API and add environment setup
- Switch backend nixpacks from instant health server to full NestJS API
- Restore TypeScript build and Prisma generation in backend
- Add railway-setup-env.sh script for automated environment configuration
- Update frontend API service to auto-detect Railway backend URL
- Add intelligent URL detection for Railway subdomain routing

Backend will now run the complete PlanTakeoff API with all endpoints:
- OAuth authentication
- File upload
- Job processing
- Takeoff results
- Materials generation

Run ./railway-setup-env.sh to configure required environment variables.

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,13 +2,16 @@
 nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
 
 [phases.install]
-cmds = ["npm install"]
+cmds = [
+  "npm install",
+  "npx prisma generate"
+]
 
 [phases.build]
-cmds = ["echo 'No build needed for instant health server'"]
+cmds = ["npm run build"]
 
 [start]
-cmd = "npm run start:instant"
+cmd = "npm run start:prod"
 
 [variables]
 NODE_ENV = "production"
