feat: Configure Wasabi S3-compatible storage
- Update storage service to use Wasabi endpoint and configuration
- Replace AWS S3 variables with Wasabi-specific environment variables
- Add s3ForcePathStyle=true for Wasabi compatibility
- Update environment examples and Railway setup script
- Support Wasabi regions and custom endpoints

Environment variables needed:
- WASABI_ENDPOINT=https://s3.wasabisys.com
- WASABI_REGION=us-east-1
- WASABI_ACCESS_KEY_ID=your-key
- WASABI_SECRET_ACCESS_KEY=your-secret
- WASABI_BUCKET_NAME=your-bucket

--- a/backend/env.example
+++ b/backend/env.example
@@ -10,11 +10,12 @@ REDIS_HOST="localhost"
 REDIS_PORT=6379
 REDIS_PASSWORD=""
 
-# AWS S3 (for file storage)
-AWS_REGION="us-east-1"
-AWS_ACCESS_KEY_ID=""
-AWS_SECRET_ACCESS_KEY=""
-S3_BUCKET_NAME="plantakeoff-files"
+# Wasabi S3-Compatible Storage (for file storage)
+WASABI_ENDPOINT="https://s3.wasabisys.com"
+WASABI_REGION="us-east-1"
+WASABI_ACCESS_KEY_ID=""
+WASABI_SECRET_ACCESS_KEY=""
+WASABI_BUCKET_NAME="plantakeoff-files"
 
 # API Configuration
 PORT=3000
