feat: Integrate OpenAI GPT-4 Vision for AI-powered plan analysis
Add comprehensive OpenAI integration for intelligent feature extraction:

New Vision Module:
- OpenAIVisionService: GPT-4 Vision for plan image analysis
- PlanAnalysisService: File processing and image conversion
- FeatureExtractionService: Convert AI results to database features

Key Features:
- GPT-4 Vision analysis of plan images (PDF, DWG, CAD files)
- Intelligent scale detection from title blocks and dimensions
- Automatic room, wall, door, window, pipe, duct, and fixture extraction
- Discipline-specific analysis (Architectural, Plumbing, Mechanical, Electrical)
- AI-enhanced feature data with material specifications and recommendations
- Structured JSON responses with technical accuracy
- Fallback mock data when OpenAI is unavailable

OpenAI Capabilities:
- High-detail image analysis for construction drawings
- Scale detection from architectural drawings
- Technical text analysis for specifications
- Feature enhancement with code compliance insights
- Multi-discipline plan understanding

Environment variable needed:
OPENAI_API_KEY=your-openai-api-key

--- a/backend/env.example
+++ b/backend/env.example
@@ -10,6 +10,9 @@ REDIS_HOST="localhost"
 REDIS_PORT=6379
 REDIS_PASSWORD=""
 
+# OpenAI API (for AI-powered feature extraction)
+OPENAI_API_KEY=""
+
 # Wasabi S3-Compatible Storage (for file storage)
 WASABI_ENDPOINT="https://s3.wasabisys.com"
 WASABI_REGION="us-east-1"
