--- a/backend/package.json
+++ b/backend/package.json
@@ -60,7 +60,8 @@
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0",
     "axios": "^1.4.0",
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "openai": "^4.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
