feat: Add enhanced API server with realistic plan analysis
Create enhanced-api.js that generates realistic takeoff data:

Features:
- Real file upload handling (stores actual uploaded files)
- Proportional data generation based on page count (35 pages → realistic quantities)
- Background job processing simulation
- OpenAI integration ready (when API key provided)
- Realistic room counts, wall lengths, pipe runs, etc.
- Multiple disciplines and fixture types
- Proper job status tracking

Data Generation:
- 3 rooms per page → 105 total rooms for 35-page plan
- 8 walls per page → 280 wall segments
- 6 fixtures per page → 210 fixtures
- Realistic sizes, areas, and quantities
- Multiple partition types and services
- Proper sheet numbering (A-1.1, A-1.2, etc.)

Usage:
- npm run start:enhanced (realistic data)
- npm run start:instant (simple mock)
- npm run start:prod (full NestJS API)

This provides realistic testing data proportional to your 35-page plan
instead of static 2-item mock responses.

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,13 +2,16 @@
 nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
 
 [phases.install]
-cmds = ["npm install"]
+cmds = [
+  "npm install",
+  "npx prisma generate"
+]
 
 [phases.build]
-cmds = ["echo 'Using instant health server - no build needed'"]
+cmds = ["npm run build"]
 
 [start]
-cmd = "npm run start:instant"
+cmd = "npm run start:prod"
 
 [variables]
 NODE_ENV = "production"
