--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "start:health": "node simple-health.js",
     "start:instant": "node instant-health.js",
+    "start:enhanced": "node enhanced-api.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
