feat: Implement REAL PDF-to-image conversion and OpenAI Vision analysis
Add actual PDF processing pipeline for real plan analysis:

Key Features:
- Real PDF upload handling (stores your actual 35-page PDF)
- pdf2pic integration for high-quality PDF-to-image conversion
- OpenAI Vision analysis of actual converted plan pages
- Extraction of real dimensions from your uploaded drawings
- Combination of analysis results from multiple pages
- Fallback to manual measurements if PDF conversion fails

Real Analysis Pipeline:
1. Upload PDF → Store actual file buffer
2. Convert PDF to high-res JPEG images (300 DPI)
3. Send each page image to OpenAI Vision
4. Extract actual dimensions (27'-6" × 45'-10" = 1,260.41 SF)
5. Combine results from all analyzed pages
6. Generate takeoff data from real measurements

This will now actually read the dimensions from your AT&T plans
instead of returning generic commercial building data.

Dependencies added:
- pdf2pic: PDF to image conversion
- canvas: Image processing support

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "start:instant": "node instant-health.js",
     "start:enhanced": "node enhanced-api.js",
     "start:commercial": "node commercial-analysis.js",
+    "start:vision": "node real-vision-analysis.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -63,7 +64,9 @@
     "uuid": "^9.0.0",
     "axios": "^1.4.0",
     "express": "^4.18.0",
-    "openai": "^4.0.0"
+    "openai": "^4.0.0",
+    "pdf2pic": "^2.1.4",
+    "canvas": "^2.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
