--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "start:enhanced": "node enhanced-api.js",
     "start:commercial": "node commercial-analysis.js",
     "start:vision": "node real-vision-analysis.js",
+    "start:comprehensive": "node comprehensive-analysis.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
