--- a/backend/package.json
+++ b/backend/package.json
@@ -65,9 +65,7 @@
     "uuid": "^9.0.0",
     "axios": "^1.4.0",
     "express": "^4.18.0",
-    "openai": "^4.0.0",
-    "pdf2pic": "^2.1.4",
-    "canvas": "^2.11.0"
+    "openai": "^4.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
