--- a/backend/package.json
+++ b/backend/package.json
@@ -36,48 +36,50 @@
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.0",
+    "@nestjs/bull": "^10.0.0",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.0",
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/passport": "^10.0.0",
+    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^7.1.0",
     "@nestjs/throttler": "^5.0.0",
-    "@nestjs/bull": "^10.0.0",
-    "@nestjs/config": "^3.0.0",
     "@prisma/client": "^5.0.0",
-    "prisma": "^5.0.0",
+    "aws-sdk": "^2.1400.0",
+    "axios": "^1.4.0",
+    "bull": "^4.11.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "express": "^4.18.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
+    "js-yaml": "^4.1.0",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.0.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "bull": "^4.11.0",
-    "redis": "^4.6.0",
-    "multer": "^1.4.5-lts.1",
-    "aws-sdk": "^2.1400.0",
-    "sharp": "^0.32.0",
     "pdf-parse": "^1.1.1",
-    "yauzl": "^2.10.0",
-    "js-yaml": "^4.1.0",
-    "class-validator": "^0.14.0",
-    "class-transformer": "^0.5.1",
+    "pdf2pic": "^3.1.0",
+    "prisma": "^5.0.0",
+    "redis": "^4.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0",
-    "axios": "^1.4.0",
-    "express": "^4.18.0",
-    "openai": "^4.0.0"
+    "yauzl": "^2.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
-    "@types/express": "^4.17.17",
+    "@types/express": "^4.17.25",
     "@types/jest": "^29.5.2",
+    "@types/js-yaml": "^4.0.5",
+    "@types/multer": "^1.4.13",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
-    "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.2",
-    "@types/js-yaml": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
