--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "backend",
     "frontend"
   ],
+  "prisma": {
+    "schema": "backend/prisma/schema.prisma"
+  },
   "scripts": {
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run start:dev",
