--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,10 +5,14 @@ nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["echo 'Using enhanced API server - no build needed'"]
+cmds = [
+  "npm run build",
+  "npx prisma generate",
+  "npx prisma migrate deploy"
+]
 
 [start]
-cmd = "npm start"
+cmd = "npm run start:prod"
 
 [variables]
 NODE_ENV = "production"
