--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -7,12 +7,11 @@ cmds = ["npm install"]
 [phases.build]
 cmds = [
   "npm run build",
-  "npx prisma generate",
-  "npx prisma migrate deploy"
+  "npx prisma generate"
 ]
 
 [start]
-cmd = "npm run start:prod"
+cmd = "node scripts/railway-startup.js"
 
 [variables]
 NODE_ENV = "production"
