--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -8,7 +8,7 @@ cmds = ["npm install"]
 cmds = ["echo 'Using enhanced API server - no build needed'"]
 
 [start]
-cmd = "npm start"
+cmd = "npm run start:prod"
 
 [variables]
 NODE_ENV = "production"
