--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["echo 'Using enhanced API server - no build needed'"]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm run start:prod"
