--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,11 +5,11 @@ nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["echo 'Using enhanced API server - no build needed'"]
 
 [start]
-cmd = "npm run start:prod"
+cmd = "npm run start"
 
 [variables]
 NODE_ENV = "production"
-MINIMAL_START = "false"
+MINIMAL_START = "true"
