--- a/backend/railway.toml
+++ b/backend/railway.toml
@@ -15,23 +15,33 @@ source = "./backend"
 NODE_ENV = "production"
 PORT = "${{ PORT }}"
 # DATABASE_URL will be automatically set by Railway when services are linked
-# If you have a managed PostgreSQL service, remove it and use the container service below
+# IMPORTANT: Ensure you remove any managed PostgreSQL service from Railway dashboard
+# The DATABASE_URL should point to the "postgres" container service below
+# Format: postgresql://plantakeoff:${POSTGRES_PASSWORD}@postgres:5432/plantakeoff
 
 [[services]]
 name = "plantakeoff-frontend"
 source = "./frontend"
 
+# PostgreSQL with PostGIS Container Service
+# IMPORTANT: Railway's managed PostgreSQL (via 'railway add --database postgresql') does NOT include PostGIS
+# 
+# CRITICAL: Before deploying, you MUST:
+# 1. Go to Railway dashboard → Remove any managed PostgreSQL service
+# 2. Ensure this container service is the only PostgreSQL service
+# 3. Railway will auto-link services and set DATABASE_URL
+#
+# Alternative: Use Railway's PostGIS template: https://railway.com/template/postgis
 [[services]]
 name = "postgres"
 source = "postgis/postgis:15-3.4"
-# IMPORTANT: This PostGIS-enabled PostgreSQL container is required for the application
-# If you have a managed PostgreSQL service (created via 'railway add --database postgresql'),
-# you must remove it and use this container service instead, as managed PostgreSQL doesn't include PostGIS
 
 [services.variables]
 POSTGRES_DB = "plantakeoff"
 POSTGRES_USER = "plantakeoff"
 POSTGRES_PASSWORD = "${{ POSTGRES_PASSWORD }}"
+# PostGIS extensions are available by default in this image
+# The application will enable them on startup via Prisma
 
 [[services]]
 name = "redis"
