--- a/backend/package.json
+++ b/backend/package.json
@@ -62,6 +62,8 @@
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
     "pdf2pic": "^3.1.0",
+    "pdfjs-dist": "^4.0.0",
+    "sharp": "^0.33.0",
     "prisma": "^5.0.0",
     "redis": "^4.6.0",
     "reflect-metadata": "^0.1.13",
