--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,11 +5,13 @@ nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["echo 'Using enhanced API server - no build needed'"]
+cmds = [
+  "npx prisma generate",
+  "npm run build"
+]
 
 [start]
-cmd = "npm run start"
+cmd = "npx prisma migrate deploy && npm run start:prod"
 
 [variables]
 NODE_ENV = "production"
-MINIMAL_START = "false"
