Fix: Resilient Railway deployment with graceful database handling
- Add railway-start-resilient.js script with database retry logic
- Update Prisma service to support SKIP_DB_INIT and minimal mode
- Change nixpacks.toml start command to use resilient startup
- Add comprehensive Railway deployment documentation
- Create CHANGELOG documenting the fix

Resolves healthcheck failure issue where app crashed on startup
when database was not immediately available.

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -11,7 +11,7 @@ cmds = [
 ]
 
 [start]
-cmd = "npx prisma migrate deploy && npm run start:prod"
+cmd = "node scripts/railway-start-resilient.js"
 
 [variables]
 NODE_ENV = "production"
