Fix: Use standard npm start:prod command instead of resilient script
The resilient script was crashing on require() before any logs appeared.
The Nov 14 deployment worked perfectly with standard npm start.
Reverting to the working approach while keeping the improved
Prisma service error handling.

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -11,7 +11,7 @@ cmds = [
 ]
 
 [start]
-cmd = "node scripts/railway-start-resilient.js"
+cmd = "npm run start:prod"
 
 [variables]
 NODE_ENV = "production"
