Fix: Add ImageMagick and GraphicsMagick to nixpacks for PDF conversion
Jobs were failing with 'pdf2pic returned empty buffer' because
ImageMagick/GraphicsMagick weren't installed in the Railway container.

Added to nixPkgs:
- imagemagick - Primary image manipulation tool
- graphicsmagick - Alternative tool (pdf2pic supports both)
- ghostscript - Required dependency for PDF processing

This enables PDF to image conversion for plan analysis.

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips"]
+nixPkgs = ["nodejs_18", "npm-9_x", "python3", "postgresql", "vips", "imagemagick", "graphicsmagick", "ghostscript"]
 
 [phases.install]
 cmds = ["npm install"]
