--- a/backend/package.json
+++ b/backend/package.json
@@ -49,6 +49,7 @@
     "@prisma/client": "^5.0.0",
     "aws-sdk": "^2.1400.0",
     "axios": "^1.4.0",
+    "canvas": "^2.11.2",
     "bull": "^4.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -60,14 +61,11 @@
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "pdf-parse": "^1.1.1",
-    "pdf2pic": "^3.1.0",
     "pdfjs-dist": "^4.0.0",
-    "sharp": "^0.33.0",
     "prisma": "^5.0.0",
     "redis": "^4.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "sharp": "^0.32.0",
     "uuid": "^9.0.0",
     "yauzl": "^2.10.0"
   },
