--- a/backend/package.json
+++ b/backend/package.json
@@ -49,7 +49,7 @@
     "@prisma/client": "^5.0.0",
     "aws-sdk": "^2.1400.0",
     "axios": "^1.4.0",
-    "canvas": "^2.11.2",
+    "@napi-rs/canvas": "^0.1.82",
     "bull": "^4.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
