Switch PDF rendering to Poppler CLI utilities
Replaces pdfjs/canvas-based PDF rendering and text extraction with Poppler CLI tools (pdftoppm, pdftotext, pdfinfo) for improved reliability and performance. Updates related services to use new rendering and extraction methods, removes pdf-parse dependency, and adds poppler to Nixpacks dependencies.

--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs_20", "npm-10_x", "python3", "postgresql", "vips", "imagemagick", "graphicsmagick", "ghostscript"]
+nixPkgs = ["nodejs_20", "npm-10_x", "python3", "postgresql", "vips", "imagemagick", "graphicsmagick", "ghostscript", "poppler"]
 
 [phases.install]
 cmds = ["npm install"]
