--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["nodejs_20", "npm-10_x", "python3", "postgresql", "vips", "imagemagick", "graphicsmagick", "ghostscript", "poppler"]
+nixPkgs = ["nodejs_20", "npm-10_x", "python3", "postgresql", "vips", "imagemagick", "graphicsmagick", "ghostscript", "poppler_utils"]
 
 [phases.install]
 cmds = ["npm install"]
