feat: Add mock job seed endpoints for testing
- POST /seed/mock-job - Creates complete test job
- DELETE /seed/mock-job - Resets mock job data
- Includes 5 rooms, walls, pipes, ducts, fixtures, materials
- Job ID: mock-test-job-001
- Can be triggered via HTTP (no local DB access needed)

--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,8 @@
     "db:migrate:prod": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "seed": "ts-node scripts/seed.ts",
+    "seed:mock-job": "ts-node scripts/seed-mock-job.ts",
+    "seed:mock-reset": "ts-node scripts/seed-mock-job.ts --reset-only",
     "railway:deploy": "./railway-deploy.sh",
     "railway:setup": "npm run db:generate && npm run db:push && npm run seed",
     "postbuild": "cp -r prisma dist/ && cp -r scripts dist/ && cp package*.json dist/"
