--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "postbuild": "cp -r prisma dist/ && cp -r scripts dist/ && cp package*.json dist/"
   },
   "dependencies": {
+    "@napi-rs/canvas": "^0.1.82",
     "@nestjs/axios": "^3.0.0",
     "@nestjs/bull": "^10.0.0",
     "@nestjs/common": "^10.0.0",
@@ -49,9 +50,10 @@
     "@nestjs/swagger": "^7.1.0",
     "@nestjs/throttler": "^5.0.0",
     "@prisma/client": "^5.0.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "aws-sdk": "^2.1400.0",
     "axios": "^1.4.0",
-    "@napi-rs/canvas": "^0.1.82",
     "bull": "^4.11.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
