--- a/backend/package.json
+++ b/backend/package.json
@@ -71,7 +71,9 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0",
-    "yauzl": "^2.10.0"
+    "yauzl": "^2.10.0",
+    "@types/express": "^4.17.25",
+    "@types/multer": "^1.4.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
