--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: starter
     buildCommand: npm install && npm run build && npm run db:generate
-    startCommand: npm run start:prod
+    startCommand: node --max-old-space-size=512 dist/main.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
@@ -33,6 +33,8 @@ services:
         value: "100"
       - key: LOG_LEVEL
         value: info
+      - key: NODE_OPTIONS
+        value: "--max-old-space-size=512"
       # Note: Add these manually in Render dashboard after deployment:
       # - OPENAI_API_KEY (required for plan analysis)
       # - REDIS_URL (optional, from Redis service connection string)
