Add Render deployment manual fix instructions
Added RENDER_MANUAL_FIX.md with step-by-step instructions to manually update the start command and environment variables in the Render dashboard to prevent memory errors. Updated .renderignore with a note clarifying nixpacks.toml usage for Render and Railway.

--- a/backend/.renderignore
+++ b/backend/.renderignore
@@ -16,7 +16,7 @@ coverage/
 Dockerfile*
 docker-compose.yml
 railway.toml
-nixpacks.toml
+# nixpacks.toml - Keep this for Railway, but Render uses render.yaml
 RAILWAY_DEPLOYMENT.md
 REDIS_SETUP.md
 REQUIRED_ENV_VARS.md
