--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     region: oregon
     plan: starter
     rootDir: backend
-    buildCommand: npm install --include=dev && npx prisma generate && npm run build
-    startCommand: npm start
+    buildCommand: export NODE_OPTIONS="--max-old-space-size=2048" && npm install --include=dev && npx prisma generate && npm run build
+    startCommand: node --max-old-space-size=1024 dist/main.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
@@ -16,4 +16,6 @@ services:
           type: web
           name: plantakeoff-backend
           property: port
+      - key: NODE_OPTIONS
+        value: "--max-old-space-size=1024"
 
