--- a/render.yaml
+++ b/render.yaml
@@ -5,8 +5,8 @@ services:
     region: oregon
     plan: starter
     rootDir: backend
-    buildCommand: export NODE_OPTIONS="--max-old-space-size=2048" && npm install --include=dev && npx prisma generate && npm run build
-    startCommand: node --max-old-space-size=1024 dist/main.js
+    buildCommand: npm install --include=dev && NODE_OPTIONS="--max-old-space-size=2048" npx prisma generate && npm run build:render
+    startCommand: node --max-old-space-size=1024 dist/main
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
