--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,17 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "npx @nestjs/cli build",
-    "build:render": "NODE_OPTIONS=\"--max-old-space-size=2048\" npm run build",
+    "build:render": "cross-env NODE_OPTIONS=\"--max-old-space-size=2048\" npx @nestjs/cli build",
+    "verify:build": "node -e \"const fs=require('fs'); const path=require('path'); const main1='dist/main.js'; const main2='dist/src/main.js'; if(fs.existsSync(main1)){console.log('✅ dist/main.js exists');} else if(fs.existsSync(main2)){console.log('✅ dist/src/main.js exists');} else {console.error('ERROR: main.js not found in dist/ or dist/src/'); console.log('Contents of dist:', fs.existsSync('dist')?fs.readdirSync('dist').join(', '):'dist does not exist'); process.exit(1);}\"",
+    "test:build": "npm run clean:dist && npm install && npm run db:generate && npm run build:render && npm run verify:build && echo '✅ Build verification successful!'",
+    "test:build:full": "npm run clean:dist && npm install --include=dev && npm run db:generate && npm run build:render && npm run verify:build && echo '✅ Full build verification successful!'",
+    "test:start:prod": "npm run verify:build && node --max-old-space-size=1024 dist/src/main.js",
+    "clean:dist": "node -e \"const fs=require('fs'); const path=require('path'); function rmDir(dir){if(fs.existsSync(dir)){fs.readdirSync(dir).forEach(f=>{const curPath=path.join(dir,f); if(fs.lstatSync(curPath).isDirectory()){rmDir(curPath);}else{fs.unlinkSync(curPath);}}); fs.rmdirSync(dir);}} rmDir('dist'); console.log('✅ Cleaned dist directory');\"",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "node dist/src/main.js",
     "start:resilient": "node scripts/railway-start-resilient.js",
     "start:health": "node simple-health.js",
     "start:instant": "node instant-health.js",
@@ -27,7 +32,6 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:generate": "prisma generate",
-    "db:generate:render": "NODE_OPTIONS=\"--max-old-space-size=2048\" npm run db:generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
@@ -52,6 +56,8 @@
     "@nestjs/swagger": "^7.1.0",
     "@nestjs/throttler": "^5.0.0",
     "@prisma/client": "^5.0.0",
+    "@types/express": "^4.17.25",
+    "@types/multer": "^1.4.13",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "aws-sdk": "^2.1400.0",
@@ -73,9 +79,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "uuid": "^9.0.0",
-    "yauzl": "^2.10.0",
-    "@types/express": "^4.17.25",
-    "@types/multer": "^1.4.13"
+    "yauzl": "^2.10.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -88,6 +92,7 @@
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
