--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -4,8 +4,8 @@ services:
     env: node
     region: oregon
     plan: starter
-    buildCommand: npm install --include=dev && npm run build:render && npm run db:generate:render
-    startCommand: node --max-old-space-size=1024 dist/main
+    buildCommand: export NODE_OPTIONS="--max-old-space-size=2048" && npm install --include=dev && npm run db:generate && npm run build:render && npm run verify:build
+    startCommand: node --max-old-space-size=1024 dist/src/main.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
