--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
+    "start": "vite preview --host 0.0.0.0",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "echo \"Frontend tests not implemented yet\""
   },
