--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: starter
     buildCommand: export NODE_OPTIONS="--max-old-space-size=2048" && npm install --include=dev && npm run db:generate && npm run build:render && npm run verify:build
-    startCommand: node --max-old-space-size=1024 dist/src/main.js
+    startCommand: node --max-old-space-size=1024 --expose-gc dist/src/main.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
@@ -34,7 +34,14 @@ services:
       - key: LOG_LEVEL
         value: info
       - key: NODE_OPTIONS
-        value: "--max-old-space-size=1024"
+        value: "--max-old-space-size=1024 --expose-gc"
+      # PDF Processing Configuration
+      - key: PDF_RENDER_DPI
+        value: "200"
+      - key: PDF_PAGE_BATCH_SIZE
+        value: "3"
+      - key: MONITOR_MEMORY
+        value: "true"
       # Note: Add these manually in Render dashboard after deployment:
       # - OPENAI_API_KEY (required for plan analysis)
       # - REDIS_URL (optional, from Redis service connection string)
