--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     plan: starter
     rootDir: backend
     buildCommand: export NODE_OPTIONS="--max-old-space-size=2048" && npm install --include=dev && npx prisma generate && npm run build:render && npm run verify:build
-    startCommand: node --max-old-space-size=1024 dist/src/main.js
+    startCommand: node --max-old-space-size=1024 --expose-gc dist/src/main.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
@@ -17,5 +17,12 @@ services:
           name: plantakeoff-backend
           property: port
       - key: NODE_OPTIONS
-        value: "--max-old-space-size=1024"
+        value: "--max-old-space-size=1024 --expose-gc"
+      # PDF Processing Configuration
+      - key: PDF_RENDER_DPI
+        value: "200"
+      - key: PDF_PAGE_BATCH_SIZE
+        value: "3"
+      - key: MONITOR_MEMORY
+        value: "true"
 
