feat: timeout image processing increase

--- a/backend/env.example
+++ b/backend/env.example
@@ -33,6 +33,10 @@ WEBHOOK_RETRIES=3
 # Processing Configuration
 MAX_FILE_SIZE=104857600  # 100MB
 SUPPORTED_MIME_TYPES="application/pdf,image/vnd.dwg,application/vnd.dwg,model/vnd.ifc"
+# PDF Conversion Timeout (default: 30 minutes)
+# Can be specified in milliseconds (PDF_CONVERSION_TIMEOUT_MS) or minutes (PDF_CONVERSION_TIMEOUT_MIN)
+# PDF_CONVERSION_TIMEOUT_MS=1800000  # 30 minutes in milliseconds
+# PDF_CONVERSION_TIMEOUT_MIN=30  # 30 minutes (alternative format)
 
 # Logging
 LOG_LEVEL="info"
