--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: starter
     buildCommand: export NODE_OPTIONS="--max-old-space-size=2048" && npm install --include=dev && npm run db:generate && npm run build:render && npm run verify:build
-    startCommand: node --max-old-space-size=1024 --expose-gc dist/src/main.js
+    startCommand: node --max-old-space-size=3072 --expose-gc dist/src/main.js
     healthCheckPath: /health
     envVars:
       - key: NODE_ENV
@@ -34,12 +34,14 @@ services:
       - key: LOG_LEVEL
         value: info
       - key: NODE_OPTIONS
-        value: "--max-old-space-size=1024 --expose-gc"
-      # PDF Processing Configuration
+        value: "--max-old-space-size=3072 --expose-gc"
+      # PDF Processing Configuration - Optimized for memory constraints
       - key: PDF_RENDER_DPI
-        value: "200"
+        value: "150"
       - key: PDF_PAGE_BATCH_SIZE
-        value: "3"
+        value: "5"
+      - key: PDF_MAX_CONCURRENT_PAGES
+        value: "1"
       - key: MONITOR_MEMORY
         value: "true"
       # Note: Add these manually in Render dashboard after deployment:
