--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -42,6 +42,8 @@ services:
         value: "5"
       - key: PDF_MAX_CONCURRENT_PAGES
         value: "1"
+      - key: VISION_BATCH_SIZE
+        value: "2"
       - key: MONITOR_MEMORY
         value: "true"
       # Note: Add these manually in Render dashboard after deployment:
