--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -16,6 +16,18 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.655.0",
     "@napi-rs/canvas": "^0.1.50",
+    "@types/axios": "^0.9.36",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
+    "@types/js-yaml": "^4.0.9",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/module-alias": "^2.0.1",
+    "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
+    "@types/node": "^24.10.1",
+    "@types/pdf-parse": "^1.1.4",
+    "@types/uuid": "^10.0.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -32,23 +44,11 @@
     "openai": "^4.104.0",
     "pdf-parse": "^1.1.1",
     "pdfjs-dist": "^3.11.174",
+    "typescript": "^5.9.3",
     "uuid": "^13.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/axios": "^0.9.36",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.5",
-    "@types/js-yaml": "^4.0.9",
-    "@types/module-alias": "^2.0.1",
-    "@types/jsonwebtoken": "^9.0.10",
-    "@types/morgan": "^1.9.10",
-    "@types/multer": "^2.0.0",
-    "@types/node": "^24.10.1",
-    "@types/pdf-parse": "^1.1.4",
-    "@types/uuid": "^10.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3"
+    "ts-node-dev": "^2.0.0"
   }
 }
