refac: update the node js backend to match the nest js backend for AI configuration

--- a/backend-node/env.example
+++ b/backend-node/env.example
@@ -21,6 +21,14 @@ OPENAI_MODEL=gpt-4o-mini
 OPENAI_TEMPERATURE=0.1
 OPENAI_MAX_PAGES=5
 OPENAI_TIMEOUT_MS=180000
+OPENAI_MAX_RETRIES=3
+OPENAI_RETRY_DELAY_MS=1000
+VISION_ALLOW_MOCK=false
+VISION_BATCH_SIZE=10
+PDF_CONVERSION_TIMEOUT_MS=3600000
+# PDF_CONVERSION_TIMEOUT_MIN=60
+PDF_RENDER_DPI=220
+PDF_RENDER_MAX_PAGES=100
 WASABI_ENDPOINT=https://s3.wasabisys.com
 WASABI_REGION=us-central-1
 WASABI_ACCESS_KEY_ID=
