--- a/backend-node/package.json
+++ b/backend-node/package.json
@@ -28,6 +28,8 @@
     "@types/node": "^24.10.1",
     "@types/pdf-parse": "^1.1.4",
     "@types/uuid": "^10.0.0",
+    "ajv": "^8.12.0",
+    "ajv-formats": "^2.1.1",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
